@@ -722,7 +722,8 @@ CdiReturnStatus RxCreateInternal(CdiConnectionProtocolType protocol_type, CdiRxC
 
     // Socket adapter does not dynamically create Rx endpoints, so create it here.
     if (kCdiStatusOk == rs && kCdiAdapterTypeSocket == config_data_ptr->adapter_handle->adapter_data.adapter_type) {
-        rs = EndpointManagerRxCreateEndpoint(con_state_ptr->endpoint_manager_handle, config_data_ptr->dest_port, NULL);
+        rs = EndpointManagerRxCreateEndpoint(con_state_ptr->endpoint_manager_handle, config_data_ptr->dest_port, NULL,
+                                             NULL);
     }
 
     if (kCdiStatusOk == rs) {
