@@ -5,13 +5,14 @@ License details at: https://github.com/aws/aws-cdi-sdk/blob/mainline/LICENSE
 -------------------------------------------------------------------------------------------
 
 ---------------------------------------------------------------------------
-CDI (Cloud Digital Interface) SDK Version 2.4.0 - 04/01/22
+CDI (Cloud Digital Interface) SDK Version 2.4.0 - 04/06/22
 ---------------------------------------------------------------------------
 
 What's New
 ------------
 * Created discussion pages on GitHub CDI-SDK site at https://github.com/aws/aws-cdi-sdk/discussions. Please start using
   so the whole community can benefit.
+* Added additional test content at https://cdi.elemental.com/test_content/index.html
 * Added new API for processing ancillary data payloads.
 * Added a new check for ancillary data payloads to cdi_test. When using the "--riff" option, cdi_test will check that
   received payloads are formatted according to the CDI Baseline Profile format specification at
